--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
   },
   "scripts": {
     "start": "nps",
-    "test": "nps test"
+    "test": "nps test",
+    "now-build": "au build --env production"
   },
   "main": "dist/app.bundle.js"
 }
