--- a/package.json
+++ b/package.json
@@ -8,66 +8,66 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.3.0",
     "aurelia-animator-css": "^1.0.4",
-    "bluebird": "^3.5.2",
-    "aurelia-polyfills": "^1.3.0"
+    "aurelia-bootstrapper": "^2.3.0",
+    "aurelia-polyfills": "^1.3.0",
+    "bluebird": "^3.5.3"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "aurelia-cli": "^1.0.0-beta.3",
-    "aurelia-testing": "^1.0.0",
-    "aurelia-tools": "^2.0.0",
-    "gulp": "^4.0.0",
-    "minimatch": "^3.0.4",
-    "through2": "^2.0.3",
-    "vinyl-fs": "^3.0.3",
-    "ts-loader": "^5.2.1",
-    "ts-node": "^7.0.1",
-    "@types/node": "^10.11.6",
-    "@types/lodash": "^4.14.117",
-    "@types/webpack": "^4.4.15",
-    "typescript": "^3.1.2",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
-    "plugin-error": "^1.0.1",
+    "@types/jest": "^23.3.9",
+    "@types/lodash": "^4.14.118",
+    "@types/node": "^10.12.9",
+    "@types/webpack": "^4.4.19",
+    "aurelia-cli": "^1.0.0-beta.5",
     "aurelia-loader-nodejs": "^1.0.1",
     "aurelia-pal-nodejs": "^1.1.1",
-    "ts-jest": "^23.10.4",
-    "@types/jest": "^23.3.5",
+    "aurelia-testing": "^1.0.0",
+    "aurelia-tools": "^2.0.0",
+    "aurelia-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
+    "del": "^3.0.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^2.0.0",
+    "gulp": "^4.0.0",
+    "gulp-rename": "^1.4.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jasmine-core": "^3.2.1",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "jest-jasmine2": "^23.6.0",
+    "jest-matchers": "^20.0.3",
+    "json-loader": "^0.5.7",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "latest",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^1.1.2",
     "karma-mocha-reporter": "latest",
-    "karma-webpack": "^3.0.5",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "jest-jasmine2": "^23.6.0",
-    "jest-matchers": "^20.0.3",
     "karma-typescript-preprocessor": "^0.4.0",
-    "gulp-rename": "^1.4.0",
-    "html-webpack-plugin": "^3.2.0",
-    "copy-webpack-plugin": "^4.5.2",
+    "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.4.3",
-    "aurelia-webpack-plugin": "^3.0.0",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
-    "expose-loader": "^0.7.5",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.1",
-    "del": "^3.0.0",
-    "css-loader": "^1.0.0",
+    "minimatch": "^3.0.4",
     "nps": "^5.9.3",
     "nps-utils": "^1.7.0",
-    "file-loader": "^2.0.0",
-    "json-loader": "^0.5.7",
-    "html-loader": "^0.5.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
     "opn": "^5.4.0",
-    "webpack-bundle-analyzer": "latest"
+    "plugin-error": "^1.0.1",
+    "style-loader": "^0.23.1",
+    "through2": "^2.0.5",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.3.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6",
+    "url-loader": "^1.1.1",
+    "vinyl-fs": "^3.0.3",
+    "webpack": "^4.25.1",
+    "webpack-bundle-analyzer": "latest",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "jest": {
     "modulePaths": [
